some changes added

--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
 
             <form action="#">
                 <div class="group">
-                    <div class="title">Total Amount</div>
-                    <input type="text" value=" " class="loan-amount" />
+                    <div class="title">Amount</div>
+                    <input type="text" value="300000" class="loan-amount" />
                 </div>
 
                 <div class="group">
                     <div class="title">Rate of Interest</div>
-                    <input type="text" value=" " class="interest-rate" />
+                    <input type="text" value="7.5" class="interest-rate" />
                 </div>
 
                 <div class="group">
                     <div class="title">No of Months</div>
-                    <input type="text" value=" " class="loan-tenure" />
+                    <input type="text" value="12" class="loan-tenure" />
                 </div>
             </form>
         </div>
@@ -36,12 +36,17 @@
             <div class="left">
                 <div class="loan-emi">
                     <h3>Loan EMI</h3>
-                    <div class="value"> </div>
+                    <div class="value">100</div>
+                </div>
+
+                <div class="total-interest">
+                    <h3>Total Interest</h3>
+                    <div class="value">123</div>
                 </div>
 
                 <div class="total-amount">
-                    <h3>Total payable amount</h3>
-                    <div class="value"> </div>
+                    <h3>Total Payable Amount</h3>
+                    <div class="value">2346</div>
                 </div>
 
                 <button class="calc-button">Calculate</button>
